--- a/KNN_1.ipynb
+++ b/KNN_1.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN-1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPX8D9HSxE+p/ZzgRmMGNey",
+      "authorship_tag": "ABX9TyO5CyKn1jJy7lDvkVwySMMa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,8 +208,11 @@
         "id": "7GLThYzrVQMr"
       },
       "source": [
+        "#X is the value\n",
+        "#y is the classification\n",
+        "\n",
         "X = [[0], [1], [2], [3], [5],[4], [-1],[-2],[-3] ]\n",
-        "y = [0, 0, 1, 1, 1, 1, 0, 0, 0]"
+        "y = [0, 0, 1, 1, 1, 2, 0, 0, 1]"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,7 +269,7 @@
         "id": "AXJC9u-dwTEs"
       },
       "source": [
-        "testp = 2.4\n",
+        "testp = -4\n",
         "print(neigh.predict([[testp]]))"
       ],
       "execution_count": null,
@@ -286,6 +289,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oFs_XqvPq5mk"
+      },
+      "source": [
+        "# **Assignment**<br>\n",
+        "Add more data to the dataset - try adding a third class to the data.<br>\n",
+        "Run the model. <br>\n",
+        "See where testp is classified"
+      ]
     }
   ]
 }
