--- a/IntroToClassification.ipynb
+++ b/IntroToClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroToClassification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOO1bvzEMXgvabcyfXCf4hJ",
+      "authorship_tag": "ABX9TyOnFoq8xBH+huKCzQr4ahLa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,6 +123,15 @@
         "- Decision Tree\n",
         "- Naïve Bayes\n",
         "- Random Forest"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tHYTz_BHucl9"
+      },
+      "source": [
+        "[Logistic Regression](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/Logistic_Regression_NB1.ipynb)"
       ]
     },
     {
