--- a/IntroToClassification.ipynb
+++ b/IntroToClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroToClassification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOnFoq8xBH+huKCzQr4ahLa",
+      "authorship_tag": "ABX9TyMsrMyGD+l6YGd/jul6uRK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,15 +153,31 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "163xTVBNkVx4"
+        "id": "GG0xHyyXu1Om"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "[Naive Bayes Bernoulli](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesBernoulli.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xlI1KmGgu9TX"
+      },
+      "source": [
+        "[Naive Bayes Gaussian](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesGaussian.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p55PB3y4vPe6"
+      },
+      "source": [
+        "[Naive Bayes MultiNomial](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesMultinomialNB.ipynb)"
+      ]
     }
   ]
 }
