--- a/NaiveBayesGaussian.ipynb
+++ b/NaiveBayesGaussian.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP8KArrN3KVJFZjCGeeeG39",
+      "authorship_tag": "ABX9TyNxbAxtswODVlmXT+VpcaER",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "id": "K3GDfR5nwz62"
       },
       "source": [
-        "Cons:<br>\n",
+        "**Cons:**<br>\n",
         "The followings are some cons of using Naïve Bayes classifiers <br>\n",
         "\n",
         "- One of the most important cons of Naïve Bayes classification is its strong feature independence because *in real life it is almost impossible to have a set of features which are completely independent of each other*.<br>\n",
