--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "NaiveBayesBernoulli.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyO5IHPW58v6vmLlgsjL5xw5",
+      "provenance": [],
+      "authorship_tag": "ABX9TyO3pRMI7moKCm84aLd5yRgz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,11 +26,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kd83t2qDyxKA"
+      },
+      "source": [
+        "Another important Naive Bayes model is Bernoulli Naïve Bayes in which features are assumed to be binary (0s and 1s). <br>\n",
+        "Text classification with ‘bag of words’ model can be an application of Bernoulli Naïve Bayes."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "DXoOPzeqBi1g",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DXoOPzeqBi1g"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -38,14 +46,13 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Hv0MoM-4AIHz",
-        "colab_type": "text"
+        "id": "Hv0MoM-4AIHz"
       },
       "source": [
         "If X is random variable Bernoulli-distributed, it can assume only two values (let’s call them 0 and 1)"
@@ -54,9 +61,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wavKBB654ezr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wavKBB654ezr"
       },
       "source": [
         "from sklearn.datasets import make_classification\n",
@@ -67,14 +72,13 @@
         "from IPython.display import Image\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-jTZVVPrAYtd",
-        "colab_type": "text"
+        "id": "-jTZVVPrAYtd"
       },
       "source": [
         "Bernoulli naive Bayes expects binary feature vectors, however, the class BernoulliNB has a binarize parameter which allows specifying a threshold that will be used internally to transform the features:"
@@ -83,8 +87,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nlDtAxug_h2w",
-        "colab_type": "text"
+        "id": "nlDtAxug_h2w"
       },
       "source": [
         "**Generate a random dataset**"
@@ -93,22 +96,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x7EXrm_H_Iq5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "x7EXrm_H_Iq5"
       },
       "source": [
         "nb_samples = 600\n",
         "X, Y = make_classification(n_samples=nb_samples,n_clusters_per_class=1, n_features=2, n_informative=1, n_redundant=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "47XmNd9nAkEO",
-        "colab_type": "text"
+        "id": "47XmNd9nAkEO"
       },
       "source": [
         "We will use 0.0 as a binary threshold, so each point can be characterized by the quadrant where it’s located"
@@ -117,8 +117,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "V29IiJLS_lLK",
-        "colab_type": "text"
+        "id": "V29IiJLS_lLK"
       },
       "source": [
         "**Scatter plot the dataset**"
@@ -127,9 +126,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "romytRN869MJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "romytRN869MJ"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -140,14 +137,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3XHBC7tp_oJh",
-        "colab_type": "text"
+        "id": "3XHBC7tp_oJh"
       },
       "source": [
         "**Split the test and training data**"
@@ -156,21 +152,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HPG7RRmF4jb4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HPG7RRmF4jb4"
       },
       "source": [
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X2kNu9BpqMnV",
-        "colab_type": "text"
+        "id": "X2kNu9BpqMnV"
       },
       "source": [
         "Plot the training data, X is the training data, Y-axis is the label (0,1)"
@@ -179,9 +172,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "motMK3lHp2tg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "motMK3lHp2tg"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -191,14 +182,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xfu85998qXxf",
-        "colab_type": "text"
+        "id": "xfu85998qXxf"
       },
       "source": [
         "Plot the testing data, X is the test data, Y-axis is the label (0,1)"
@@ -207,9 +197,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A7_ekjLvqeOK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "A7_ekjLvqeOK"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -219,14 +207,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WFjFUN8Y_tFe",
-        "colab_type": "text"
+        "id": "WFjFUN8Y_tFe"
       },
       "source": [
         "**Create and train the model**"
@@ -235,22 +222,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_iEPECeM_siK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_iEPECeM_siK"
       },
       "source": [
         "bnb = BernoulliNB(binarize=0.0)\n",
         "bnb.fit(X_train, Y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vIZUIs1aAsuw",
-        "colab_type": "text"
+        "id": "vIZUIs1aAsuw"
       },
       "source": [
         "If we want to understand how the binary classifier worked, it’s useful to see how the data have been internally binarized:"
@@ -259,8 +243,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "08JVkg3S_00g",
-        "colab_type": "text"
+        "id": "08JVkg3S_00g"
       },
       "source": [
         "**Determine Model performance**"
@@ -269,21 +252,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IvhVtirB_zjY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "IvhVtirB_zjY"
       },
       "source": [
         "bnb.score(X_test, Y_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0dJ6Hkte_4HO",
-        "colab_type": "text"
+        "id": "0dJ6Hkte_4HO"
       },
       "source": [
         "**Make a prediction with the model**"
@@ -292,9 +272,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AJ1XqcG12Jls",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AJ1XqcG12Jls"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -305,21 +283,19 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gEzRy1Tp6udt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gEzRy1Tp6udt"
       },
       "source": [
         "data = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
         "bnb.predict(data)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
