--- a/NaiveBayesMultinomialNB.ipynb
+++ b/NaiveBayesMultinomialNB.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "NaiveBayesMultinomialNB.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPyeot4H5tv7AC3utLnXHcM",
+      "provenance": [],
+      "authorship_tag": "ABX9TyO5ki7Qf5u54DG+dlwr0Id2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Jxlbr1KtDlkF",
-        "colab_type": "text"
+        "id": "ZFojCMRhzU15"
       },
       "source": [
-        "https://hub.packtpub.com/implementing-3-naive-bayes-classifiers-in-scikit-learn/\n"
+        "In Multinomial Naïve Bayes the features are assumed to be drawn from a simple Multinomial distribution. Such kind of Naïve Bayes are most appropriate for the features that represents discrete counts."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3w5SA8EuCoQ_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3w5SA8EuCoQ_"
       },
       "source": [
         "from sklearn.feature_extraction import DictVectorizer\n",
@@ -49,14 +46,13 @@
         "from IPython.display import Image\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gjiv9XNIZ91e",
-        "colab_type": "text"
+        "id": "gjiv9XNIZ91e"
       },
       "source": [
         "Create text data<br>\n",
@@ -66,9 +62,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ImE__1MgCovU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ImE__1MgCovU"
       },
       "source": [
         "data = [\n",
@@ -82,14 +76,13 @@
         "print(X)\n",
         "#car house river shop street tree"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wE331bsnce1p",
-        "colab_type": "text"
+        "id": "wE331bsnce1p"
       },
       "source": [
         "The output classes are:<br>\n",
@@ -100,21 +93,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lCzOkprOfZg6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lCzOkprOfZg6"
       },
       "source": [
         "print(Y)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eGnR0XAcappZ",
-        "colab_type": "text"
+        "id": "eGnR0XAcappZ"
       },
       "source": [
         "Create and train the model"
@@ -123,42 +113,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AKreeqoXDFJV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AKreeqoXDFJV"
       },
       "source": [
         "mnb = MultinomialNB()\n",
         "mnb.fit(X, Y)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_F0NfbfyDNCJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_F0NfbfyDNCJ"
       },
       "source": [
         "test_data = data = [\n",
         "{'house': 80, 'street': 20, 'shop': 15, 'car': 70, 'tree': 10, 'river': 1}]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7cu6R3L0C9BY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7cu6R3L0C9BY"
       },
       "source": [
         "mnb.predict(dv.fit_transform(test_data))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
