--- a/NaiveBayesMultinomialNB.ipynb
+++ b/NaiveBayesMultinomialNB.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyO5ki7Qf5u54DG+dlwr0Id2",
+      "authorship_tag": "ABX9TyO4PAJbSuLuQY4Eh+496kOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,15 @@
       },
       "source": [
         "In Multinomial Naïve Bayes the features are assumed to be drawn from a simple Multinomial distribution. Such kind of Naïve Bayes are most appropriate for the features that represents discrete counts."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oLB60cidz9-U"
+      },
+      "source": [
+        "Naïve Bayes, which is computationally very efficient and easy to implement, is a learning algorithm frequently used in text classification problems."
       ]
     },
     {
