--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -43,7 +43,7 @@
         "id": "skeDVtEBtb25"
       },
       "source": [
-        "# **Cross Validation (CV)**"
+        "# **Intro to Cross Validation (CV)**"
       ]
     },
     {
@@ -116,11 +116,14 @@
         "id": "HhM3yzY0wshU"
       },
       "source": [
-        "There are several cross-validation methods: <br>\n",
+        "There are several cross-validation methods. <br>\n",
+        "We will look at the basic methods.<br>\n",
+        "You can do a deeper dive into CV by<br>\n",
+        "checking this [link](https://scikit-learn.org/stable/modules/cross_validation.html) <br>\n",
+        "Basic Cross Validation Methods we will explore in these two notebooks: <br>\n",
         "- Holdout\n",
         "- K-fold CV\n",
-        "- Leave One Out (LOOCV)\n",
-        "- Repeated random sub-sampling"
+        "- Leave One Out (LOOCV)"
       ]
     },
     {
