--- a/Hierarchical_Clustering_1.ipynb
+++ b/Hierarchical_Clustering_1.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Hierarchical Clustering 1.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNVS3Rexodh/zYz0EzxV/kp",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPExk6OvKHKJlRWt7DfEH35",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_IcKKbZTvYa8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_IcKKbZTvYa8"
       },
       "source": [
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
@@ -43,8 +41,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6fBO0nTesAOL",
-        "colab_type": "text"
+        "id": "6fBO0nTesAOL"
       },
       "source": [
         "Hierarchical clustering is another unsupervised learning algorithm that is used to group together the unlabeled data points having similar characteristics.\n"
@@ -53,8 +50,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hDgqPPJnrA-s",
-        "colab_type": "text"
+        "id": "hDgqPPJnrA-s"
       },
       "source": [
         "Hierarchical clustering"
@@ -63,8 +59,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B2Hwzn_esgvA",
-        "colab_type": "text"
+        "id": "B2Hwzn_esgvA"
       },
       "source": [
         "Steps to Perform Agglomerative Hierarchical Clustering\n",
@@ -86,9 +81,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i_VjpR8optSe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "i_VjpR8optSe"
       },
       "source": [
         "%matplotlib inline\n",
@@ -104,8 +97,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TnL5Ye0KrHH3",
-        "colab_type": "text"
+        "id": "TnL5Ye0KrHH3"
       },
       "source": [
         "Create and plot some data "
@@ -114,9 +106,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2dma3wljhs53",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2dma3wljhs53"
       },
       "source": [
         "#NUMBER OF DATA POINTS\n",
@@ -131,9 +121,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oN46JDhyf3hK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "oN46JDhyf3hK"
       },
       "source": [
         "from sklearn.datasets import make_blobs\n",
@@ -155,8 +143,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eEa6pwN2taKp",
-        "colab_type": "text"
+        "id": "eEa6pwN2taKp"
       },
       "source": [
         "We can see that we have three clusters in our datapoints but in the real world data, there can be thousands of clusters. \n",
@@ -167,8 +154,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yKwEUCkPtic2",
-        "colab_type": "text"
+        "id": "yKwEUCkPtic2"
       },
       "source": [
         "Once the big cluster is formed, the longest vertical distance is selected. <br>\n",
@@ -178,9 +164,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bPrFuhoGrMBg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bPrFuhoGrMBg"
       },
       "source": [
         "linked = linkage(X, 'single')\n",
@@ -197,8 +181,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9a7okvNZtwnu",
-        "colab_type": "text"
+        "id": "9a7okvNZtwnu"
       },
       "source": [
         "Make predictions"
@@ -207,9 +190,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KtpC_59ntu-Y",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KtpC_59ntu-Y"
       },
       "source": [
         "cluster = AgglomerativeClustering(n_clusters = 3, affinity = 'euclidean', linkage = 'ward')\n",
@@ -221,8 +202,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FOVtFIjTt5lH",
-        "colab_type": "text"
+        "id": "FOVtFIjTt5lH"
       },
       "source": [
         "Color the datapoints by group"
@@ -231,15 +211,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "laywU9K9t4II",
-        "colab_type": "code",
-        "colab": {}
+        "id": "laywU9K9t4II"
       },
       "source": [
         "plt.scatter(X[:,0],X[:,1], c = cluster.labels_, cmap = 'rainbow')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "40TY-MThHBfs"
+      },
+      "source": [
+        "**Assignment** <br>\n",
+        "- Change the number of clusters in the data set to 4 clusters. How does the model respond?<br>\n",
+        "- Increase the number of data points to 100, then 1000, then 10,000 - How does the model respond?<br>\n",
+        "- Try different combinations of data points and number of clusters. "
+      ]
     }
   ]
 }
