--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Hierarchical Clustering 2.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyP+n4C9XQRrV66FvYvJHa1f",
+      "provenance": [],
+      "authorship_tag": "ABX9TyMsNx9HLKl3Nd+UfsAaG7Qx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tHK0Fgfi4NoJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tHK0Fgfi4NoJ"
       },
       "source": [
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "%cd cloned-repo"
       ],
       "execution_count": null,
       "outputs": []
@@ -43,8 +40,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KzaxMRqrsH3M",
-        "colab_type": "text"
+        "id": "KzaxMRqrsH3M"
       },
       "source": [
         "Import libraries"
@@ -53,9 +49,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t4zcX3gP4FmU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "t4zcX3gP4FmU"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -72,8 +66,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aPuS5dBasK7t",
-        "colab_type": "text"
+        "id": "aPuS5dBasK7t"
       },
       "source": [
         "Get the data and prepare the data<br>\n",
@@ -84,9 +77,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FBE8sFAm3965",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FBE8sFAm3965"
       },
       "source": [
         "path = \"pima_indians_diabetes.csv\"\n",
@@ -99,9 +90,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fv3wv69lx42h",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Fv3wv69lx42h"
       },
       "source": [
         "data"
@@ -112,9 +101,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XYOxC5rRbxwT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "XYOxC5rRbxwT"
       },
       "source": [
         "#!cat pima_indians_diabetes.csv"
@@ -125,8 +112,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rLrmdsi-xj_r",
-        "colab_type": "text"
+        "id": "rLrmdsi-xj_r"
       },
       "source": [
         "Convert all the data to numeric data"
@@ -135,9 +121,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wU1ntte06GUj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wU1ntte06GUj"
       },
       "source": [
         "data[\"preg\"] = pd.to_numeric(data[1:][\"preg\"], downcast=\"float\")\n",
@@ -158,9 +142,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G0-JceoSye8S",
-        "colab_type": "code",
-        "colab": {}
+        "id": "G0-JceoSye8S"
       },
       "source": [
         "data"
@@ -171,8 +153,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CCvRBIW4y9V9",
-        "colab_type": "text"
+        "id": "CCvRBIW4y9V9"
       },
       "source": [
         "Split the data into features and labels"
@@ -181,9 +162,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sQWIg-zzUGOs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sQWIg-zzUGOs"
       },
       "source": [
         "array = data.values\n",
@@ -194,10 +173,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_QvXH3EhSInj"
+      },
+      "source": [
+        "Y.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dqNvcEi5zB44",
-        "colab_type": "text"
+        "id": "dqNvcEi5zB44"
       },
       "source": [
         "Drop the 0 row."
@@ -206,9 +195,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sD8RA8ZB7k4k",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sD8RA8ZB7k4k"
       },
       "source": [
         "data = data.drop([0])"
@@ -219,9 +206,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MepdsjhW5XMG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MepdsjhW5XMG"
       },
       "source": [
         "print(data.shape)\n",
@@ -233,8 +218,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "krJEFzDmzT9z",
-        "colab_type": "text"
+        "id": "krJEFzDmzT9z"
       },
       "source": [
         "Examine the data stats"
@@ -243,9 +227,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ri7j4pEtakGX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ri7j4pEtakGX"
       },
       "source": [
         "data.describe"
@@ -256,8 +238,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "avamStkKzX-c",
-        "colab_type": "text"
+        "id": "avamStkKzX-c"
       },
       "source": [
         "Pick two features to plot"
@@ -266,9 +247,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "huzNlZVyqz29",
-        "colab_type": "code",
-        "colab": {}
+        "id": "huzNlZVyqz29"
       },
       "source": [
         "patient_data = data[\"skin\"], data[\"test\"]"
@@ -279,9 +258,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "le3wyOlt81Nj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "le3wyOlt81Nj"
       },
       "source": [
         "plt.figure(figsize = (10, 7))\n",
@@ -295,8 +272,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l8ZBZSW0VxLx",
-        "colab_type": "text"
+        "id": "l8ZBZSW0VxLx"
       },
       "source": [
         "The dendrograms<br>\n",
@@ -310,8 +286,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jdSbV6eYV4mM",
-        "colab_type": "text"
+        "id": "jdSbV6eYV4mM"
       },
       "source": [
         "Horizontal lines are cluster merges<br>\n",
@@ -322,9 +297,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7gZA3X3R4l0Q",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7gZA3X3R4l0Q"
       },
       "source": [
         "plt.figure(figsize = (20, 10))\n",
@@ -339,8 +312,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mL6Ag0iRZBgV",
-        "colab_type": "text"
+        "id": "mL6Ag0iRZBgV"
       },
       "source": [
         "A huge jump in distance is typically what we're interested in if we want to select for a certain number of clusters. "
@@ -349,9 +321,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J2DDqx6XZSqR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "J2DDqx6XZSqR"
       },
       "source": [
         "def fancy_dendrogram(*args, **kwargs):\n",
@@ -384,8 +354,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-1jBtjjN0HtK",
-        "colab_type": "text"
+        "id": "-1jBtjjN0HtK"
       },
       "source": [
         "Set the cutoff for the distance"
@@ -394,9 +363,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mZHQqJujGOok",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mZHQqJujGOok"
       },
       "source": [
         "# set cut-off to 50\n",
@@ -409,9 +376,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-XUm_m4XZV-F",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-XUm_m4XZV-F"
       },
       "source": [
         "fancy_dendrogram(\n",
@@ -432,8 +397,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BO8hBE0e0Z0T",
-        "colab_type": "text"
+        "id": "BO8hBE0e0Z0T"
       },
       "source": [
         "Make predictions"
@@ -442,9 +406,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jHF2eU7ZrUn6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jHF2eU7ZrUn6"
       },
       "source": [
         "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
@@ -456,8 +418,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zDCIbC911CD1",
-        "colab_type": "text"
+        "id": "zDCIbC911CD1"
       },
       "source": [
         "scipy.cluster.hierarchy.fcluster can be used to flatten the dendrogram, obtaining as a result an assignation of the original data points to single clusters.<br>\n",
@@ -468,9 +429,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sjr_93bCrsvX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Sjr_93bCrsvX"
       },
       "source": [
         "from scipy.cluster.hierarchy import fcluster\n",
@@ -483,15 +442,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PVLmQeJT8cNS",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PVLmQeJT8cNS"
       },
       "source": [
         "plt.figure(figsize = (10, 7))\n",
         "plt.scatter(patient_data[0], patient_data[1], c = clusters, cmap = 'rainbow')\n",
         "plt.xlabel(\"skin\")\n",
         "plt.ylabel(\"test\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b7bxJEwiRVRE"
+      },
+      "source": [
+        "# Python script for confusion matrix creation.\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import classification_report"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "83IbAuXuQkyP"
+      },
+      "source": [
+        "results = confusion_matrix(Y[1:], clusters)\n",
+        "print ('Confusion Matrix :')\n",
+        "print(results)\n",
+        "print ('Accuracy Score :',accuracy_score(Y[1:], clusters))\n",
+        "print('Classification Report : ')\n",
+        "print (classification_report(Y[1:], clusters))"
       ],
       "execution_count": null,
       "outputs": []
